--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -853,7 +853,7 @@
                     <div class="dropdown-menu show">
                       <a
                         class="dropdown-item"
-                        href="WRK/FIL/WRKFIL001M0.html"
+                        href="wrk/fil/WRKFIL001M0.html"
                         target="_blank"
                         rel="noopener"
                       >
