--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -354,16 +354,16 @@
 	
   <!-- <aside>
     &nbsp;파일관리<br />
-    &nbsp;&nbsp;&nbsp;<a href="WRK/FIL/WRKFIL001M0.html" target="main"
+    &nbsp;&nbsp;&nbsp;<a href="/views/wrk/fil/WRKFIL001M0.html" target="main"
       >파일관리</a
     ><br />
-    &nbsp;&nbsp;&nbsp;<a href="WRK/FIL/WRKFIL002M0.html" target="main"
+    &nbsp;&nbsp;&nbsp;<a href="/views/wrk/fil/WRKFIL002M0.html" target="main"
       >칼럼관리</a
     ><br />
-    &nbsp;&nbsp;&nbsp;<a href="WRK/FIL/WRKFIL003M0.html" target="main"
+    &nbsp;&nbsp;&nbsp;<a href="/views/wrk/fil/WRKFIL003M0.html" target="main"
       >업로드 </a
     ><br />
-    &nbsp;&nbsp;&nbsp;<a href="WRK/FIL/WRKFIL004M0.html" target="main"
+    &nbsp;&nbsp;&nbsp;<a href="/views/wrk/fil/WRKFIL004M0.html" target="main"
       >적재이력</a
     ><br />
     &nbsp;&nbsp;&nbsp;검증관리(X) <br />
@@ -793,7 +793,7 @@
           <div class="collapse navbar-collapse" id="sidebar-menu">
             <ul class="navbar-nav pt-lg-3">
                   <!-- <li class="nav-item">
-                    <a class="nav-link" href="WRK/FIL/WRKFIL001M0.html">
+                    <a class="nav-link" href="/views/wrk/fil/WRKFIL001M0.html">
                       <span class="nav-link-icon d-md-none d-lg-inline-block"
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
@@ -853,18 +853,18 @@
                     <div class="dropdown-menu show">
                       <a
                         class="dropdown-item"
-                        href="wrk/fil/WRKFIL001M0.html"
+                        href="/views/wrk/fil/WRKFIL001M0.html"
                         target="_blank"
                         rel="noopener"
                       >
                         File Management
                       </a>
-                      <a class="dropdown-item" href="WRK/FIL/WRKFIL002M0.html">
+                      <a class="dropdown-item" href="/views/wrk/fil/WRKFIL002M0.html">
                         File Input
                       </a>
                       <a
                         class="dropdown-item"
-                        href="WRK/FIL/WRKFIL003M0.html"
+                        href="/views/wrk/fil/WRKFIL003M0.html"
                         target="_blank"
                         rel="noopener"
                       >
@@ -873,7 +873,7 @@
                       <a
                         class="dropdown-item"
                        
-                        href="WRK/FIL/WRKFIL004M0.html"
+                        href="/views/wrk/fil/WRKFIL004M0.html"
                         target="_blank"
                         rel="noopener"
                       >
