--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -378,11 +378,11 @@
     ><br />
     &nbsp;&nbsp;&nbsp;게시판(X)<br />
     &nbsp;배치관리<br />
-    &nbsp;&nbsp;&nbsp;<a href="WRK/BAT/WRKBAT001M0.html" target="main"
+    &nbsp;&nbsp;&nbsp;<a href="/views/wrk/bat/WRKBAT001M0.html" target="main"
       >배치관리</a
     ><br />
     &nbsp;&nbsp;&nbsp;배치실행(X)<br />
-    &nbsp;&nbsp;&nbsp;<a href="WRK/BAT/WRKBAT003M0.html" target="main"
+    &nbsp;&nbsp;&nbsp;<a href="/views/wrk/bat/WRKBAT003M0.html" target="main"
       >배치결과</a
     ><br />
     &nbsp;배치관리<br />
@@ -918,9 +918,9 @@
                     <div class="dropdown-menu show">
                       <div class="dropdown-menu-columns">
                         <div class="dropdown-menu-column">
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html"> Job List </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT002M0.html"> Job Runs </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT003M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html"> Job List </a>
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT002M0.html"> Job Runs </a>
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT003M0.html">
                             Job Results
                           </a>
                         </div>
@@ -970,21 +970,21 @@
                     <div class="dropdown-menu">
                       <div class="dropdown-menu-columns">
                         <div class="dropdown-menu-column">
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Account Code
                           </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Journal Rules
-                          </a><a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          </a><a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Journal Result
                           </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Insurance Summary
                           </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Financial Statement
                           </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Audit Logs
                           </a>
                       </div>
@@ -1027,12 +1027,12 @@
                     <div class="dropdown-menu">
                       <div class="dropdown-menu-columns">
                         <div class="dropdown-menu-column">
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Users
                           </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Code
-                          </a><a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          </a><a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Services
                           </a>
                       </div>
@@ -1072,12 +1072,12 @@
                     <div class="dropdown-menu">
                       <div class="dropdown-menu-columns">
                         <div class="dropdown-menu-column">
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Company
                           </a>
-                          <a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          <a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Users
-                          </a><a class="dropdown-item" href="WRK/BAT/WRKBAT001M0.html">
+                          </a><a class="dropdown-item" href="/views/wrk/bat/WRKBAT001M0.html">
                             Services
                           </a>
                       </div>
