불필요한 파일 삭제

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -106,15 +106,19 @@
 			      } */
 		</style>
 		<script>
-		      $(document).ready(function () {
-		        console.log("Document is ready.");
-		        $("#send").click(getGocInfo);
-		        $("input").on("keyup", function (key) {
-		          if (key.keyCode == 13) {
-		            getGocInfo();
-		          }
-		        });
-		      });
+			$(document).ready(function () {
+				
+				console.log("Document is ready.");
+				
+				$("#send").click(getGocInfo);
+				
+				$("input").on("keyup", function (key) {
+					if (key.keyCode == 13) {
+						getGocInfo();
+					}
+				});
+				
+			});
 		
 		      function getGocInfo() {
 		        console.log("Sending AJAX request...");
@@ -367,7 +371,7 @@
     ><br />
   </aside> -->
 	<!---------- header,left (종료) -------------->
-	<body>
+	<body>	
 		<script src="/js/js-tabler/demo-theme.min.js?1692870487"></script>
 		<div class="page">
 			<!-- <aside
@@ -532,6 +536,15 @@
               </div>
             </div> -->
 					</div>
+					<script>
+						function goMenuPage (pageName) {
+							$("#pageName").val(pageName);
+							$("#form").submit();
+						}
+					</script>
+					<form id="form" name="form" method="post" action="/menuLink">
+						<input type="hidden" id="pageName" name="pageName" />
+					</form>
 					<div class="collapse navbar-collapse" id="sidebar-menu">
 						<ul class="navbar-nav pt-lg-3">
 							<!-- <li class="nav-item">
@@ -558,22 +571,29 @@
                       Home
                     </a>
                   </li> -->
-							<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
-										<!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                          <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
-                          <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
-                          <path d="M15 15l3.35 3.35" />
-                          <path d="M9 15l-3.35 3.35" />
-                          <path d="M5.65 5.65l3.35 3.35" />
-                          <path d="M18.35 5.65l-3.35 3.35" />
-                        </svg>
-								</span> <span class="nav-link-title"> Input Files </span>
-							</a>
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false">
+									<span class="nav-link-icon d-md-none d-lg-inline-block">
+										<!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
+										<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          					<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                          					<path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+											<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+											<path d="M15 15l3.35 3.35" />
+											<path d="M9 15l-3.35 3.35" />
+											<path d="M5.65 5.65l3.35 3.35" />
+											<path d="M18.35 5.65l-3.35 3.35" />
+										</svg>
+									</span>
+									<span class="nav-link-title"> Input Files </span>
+								</a>
 								<div class="dropdown-menu show">
-									<a class="dropdown-item" href="/views/wrk/fil/WRKFIL001M0.html" target="_blank" rel="noopener"> File Management </a> <a class="dropdown-item" href="/views/wrk/fil/WRKFIL002M0.html"> File Input </a> <a class="dropdown-item" href="/views/wrk/fil/WRKFIL003M0.html" target="_blank" rel="noopener"> File Upload </a> <a class="dropdown-item" href="/views/wrk/fil/WRKFIL004M0.html" target="_blank" rel="noopener"> <!-- class="dropdown-item text-pink" --> Load history
-									</a>
-								</div></li>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> File Management </a>
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL002M0');"> File Input </a> 
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL003M0');"> File Upload </a> 
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> <!-- class="dropdown-item text-pink" --> Load history </a>
+								</div>
+							</li>
 							<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
 										<!-- Download SVG icon from http://tabler-icons.io/i/package --> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                           <path stroke="none" d="M0 0h24v24H0z" fill="none" />
