--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,35 +1,17 @@
-<!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="../../../../js/jquery-3.7.1.min.js"></script>
-	<script src="../../../../js/jquery-ui.min.js"></script>
-	<script src="/static/js/slickgrid/lib/jquery.event.drag-2.3.0.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.core.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.interactions.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.grid.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.dataview.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.autotooltips.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.cellrangedecorator.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.cellrangeselector.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.cellexternalcopymanager.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.cellselectionmodel.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.checkboxselectcolumn.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/plugins/slick.rowselectionmodel.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.editors.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.formatters.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/slick.compositeeditor.js"></script>
-	<script src="/static/js/slickgrid/dist/browser/controls/slick.pager.js"></script>
-	<script src="/static/js/xlsx.full.min.js"></script>
-	<script src="/static/js/utils.js"></script>
-</head>
-<th:block th:fragment="footerFragment">
- <!-- #footer -->
-  <div id="footer">
-    <div class="footer" style="font-family: 'Pretendard','Noto Sans KR', sans-serif;">
-      <div class="footer-text"> &nbsp;&nbsp;&nbsp;&nbsp;<strong>Copyright</strong> RDS &copy; 2024 </div>
+  <head> </head>
+  <th:block th:fragment="footer">
+    <!-- #footer -->
+    <div id="footer">
+      <div
+        class="footer"
+        style="font-family: 'Pretendard', 'Noto Sans KR', sans-serif"
+      >
+        <div class="footer-text">
+          &nbsp;&nbsp;&nbsp;&nbsp;<strong>Copyright</strong> RDS &copy; 2024
+        </div>
+      </div>
     </div>
-  </div>
-  <!-- //#footer -->
-</th:block>
+    <!-- //#footer -->
+  </th:block>
 </html>
