--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,27 +1,14 @@
 <!DOCTYPE html>
-<html
-  lang="ko"
-  xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
->
-  <th:block th:replace="fragments/header :: header"></th:block>
-  <body>
-    <div th:insert="fragments/sidebar :: sidebar">
-      <!-- <th:block th:replace="fragments/150t :: titleFragment"></th:block> -->
-      <div
-        class="content"
-        style="
-          position: fixed;
-          width: 100%;
-          min-width: 1400px;
-          overflow: hidden;
-        "
-      >
-        <div th:include="~{::content}">
-          <h1>Hello</h1>
-        </div>
-      </div>
-    </div>
-    <th:block th:insert="fragments/footer :: footer"></th:block>
-  </body>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+	
+	<th:block th:insert="fragments/head_j :: headFragment"></th:block>
+
+	<body>
+		<div class="page">
+			
+			<th:block th:insert="fragments/sidebar_j :: sidebarFragment"></th:block>
+			<th:block layout:fragment="content"></th:block>
+
+		</div>
+	</body>
 </html>
