fix: file input page content loading initialized

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko" >
 	<head>
 		<meta charset="UTF-8" />
 		<title>SlickGrid AJAX Example</title>
@@ -8,11 +8,11 @@
 		
 		<!-- // this is the tabler css files import : -->
 		
-		<link href="/css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
-		<link href="/css/css-tabler/tabler-flags.min.css?1692870487" rel="stylesheet" />
-		<link href="/css/css-tabler/tabler-payments.min.css?1692870487" rel="stylesheet" />
-		<link href="/css/css-tabler/tabler-vendors.min.css?1692870487" rel="stylesheet" />
-		<link href="/css/css-tabler/demo.min.css?1692870487" rel="stylesheet" />
+		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
+		<link href="css/css-tabler/tabler-flags.min.css?1692870487" rel="stylesheet" />
+		<link href="css/css-tabler/tabler-payments.min.css?1692870487" rel="stylesheet" />
+		<link href="css/css-tabler/tabler-vendors.min.css?1692870487" rel="stylesheet" />
+		<link href="css/css-tabler/demo.min.css?1692870487" rel="stylesheet" />
 		
 		<!-- // until here -->
 		
@@ -306,7 +306,7 @@
 	</header>
   </div>
 	<body>	
-		<script src="/js/js-tabler/demo-theme.min.js?1692870487"></script>
+		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 		<div class="page">
 			<!-- <aside
 			class="navbar navbar-vertical navbar-expand-lg"
@@ -444,31 +444,6 @@
 								</div>
 							</div>
 						</div>
-						<!-- <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link d-flex lh-1 text-reset p-0"
-                data-bs-toggle="dropdown"
-                aria-label="Open user menu"
-              >
-                <span
-                  class="avatar avatar-sm"
-                  style="background-image: url(./static/avatars/000m.jpg)"
-                ></span>
-                <div class="d-none d-xl-block ps-2">
-                  <div>Paweł Kuna</div>
-                  <div class="mt-1 small text-secondary">UI Designer</div>
-                </div>
-              </a>
-              <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                <a href="#" class="dropdown-item">Status</a>
-                <a href="./profile.html" class="dropdown-item">Profile</a>
-                <a href="#" class="dropdown-item">Feedback</a>
-                <div class="dropdown-divider"></div>
-                <a href="./settings.html" class="dropdown-item">Settings</a>
-                <a href="./sign-in.html" class="dropdown-item">Logout</a>
-              </div>
-            </div> -->
 					</div>
 					<script>
 						function goMenuPage (pageName) {
@@ -499,7 +474,7 @@
 								</a>
 								<div class="dropdown-menu show">
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/layout/file_01');"> File Management </a>
-									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL002M0');"> File Input </a> 
+									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/layout/file02');"> File Input </a> 
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL003M0');"> File Upload </a> 
 									<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> <!-- class="dropdown-item text-pink" --> Load history </a>
 								</div>
@@ -571,17 +546,5 @@
 					</div>
 				</div>
 			</aside>
-			<script src="/js/js-tabler/demo-theme.min.js?1692870487"></script>
-			<!-- Libs JS -->
-			<script src="/libs/apexcharts/dist/apexcharts.min.js?1692870487" defer></script>
-			<script src="/libs/jsvectormap/dist/js/jsvectormap.min.js?1692870487" defer></script>
-			<script src="/libs/jsvectormap/dist/maps/world.js?1692870487" defer></script>
-			<script src="/libs/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
-			<!-- Tabler Core -->
-			<script src="/js/js-tabler/tabler.min.js?1692870487" defer></script>
-			<script src="/js/js-tabler/demo.min.js?1692870487" defer></script>
-			<!-- <iframe height="900" width="1750"></iframe> -->
-			<footer align="center"> © 2024 RNA Data System LIMITED. All rights reserved </footer>
-		</div>
 	</body>
 </html>
