--- a/src/main/resources/templates/layout/file_01.html
+++ b/src/main/resources/templates/layout/file_01.html
@@ -6,67 +6,62 @@
 >
   <head>
     <!-- CSS files -->
+    <link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
     <link
-      href="static/css/css-tabler/tabler.min.css?1692870487"
+      href="css/css-tabler/tabler-flags.min.css?1692870487"
       rel="stylesheet"
     />
     <link
-      href="static/css/css-tabler/tabler-flags.min.css?1692870487"
+      href="css/css-tabler/tabler-payments.min.css?1692870487"
       rel="stylesheet"
     />
     <link
-      href="static/css/css-tabler/tabler-payments.min.css?1692870487"
+      href="css/css-tabler/tabler-vendors.min.css?1692870487"
       rel="stylesheet"
     />
-    <link
-      href="static/css/css-tabler/tabler-vendors.min.css?1692870487"
-      rel="stylesheet"
-    />
-    <link
-      href="static/css/css-tabler/demo.min.css?1692870487"
-      rel="stylesheet"
-    />
+    <link href="css/css-tabler/demo.min.css?1692870487" rel="stylesheet" />
 
-    <link href="static/css/file-css.css" rel="stylesheet" />
+    <link href="css/file-css.css" rel="stylesheet" />
   </head>
 
-  <body oncontextmenu="return false;">
+  <body style="width: 100%; min-width: 1400px" oncontextmenu="return false;">
     <div class="page">
-      <div th:replace="fragments/header :: header"></div>
-      <div th:replace="fragments/sidebar :: sidebar"></div>
+      <th:block th:replace="fragments/header :: header"></th:block>
+      <th:block th:replace="fragments/sidebar :: sidebar"></th:block>
       <!-- <script src="static/js/js-tabler/demo-theme.min.js?1692870487"></script> -->
       <!-- <div th:replace="fragments/header :: header"></div> -->
-      <div class="">
-        <th:block layout:fragment="content" class="content"></th:block>
+      <!-- <div th:include="~{::content}" class="content"></div> -->
+      <div class="page-wrapper" id="page-wrapper">
+        <!-- <div th:fragment="content" class="content"></div> -->
+        <th:block layout:fragment="content"></th:block>
+        <!-- <div th:replace="views/wrk/fil/WRKFIL001M0 :: content"></div> -->
+        <!-- <div th:replace="~{views/wrk/fil/WRKFIL001M0 :: content}"></div> -->
       </div>
-      <!-- </div> -->
     </div>
-
-    <!-- Mainly scripts -->
-    <script src="/static/js/js-tabler/demo-theme.min.js?1692870487"></script>
+    <script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../../../js/jquery-3.7.1.min.js"></script>
-    <script src="../../../../js/jquery-ui.min.js"></script>
-    <script src="/static/js/slickgrid/lib/jquery.event.drag-2.3.0.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/slickgrid/lib/jquery.event.drag-2.3.0.js"></script>
 
-    <script src="/static/js/slickgrid/dist/browser/slick.core.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/slick.interactions.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/slick.grid.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/slick.dataview.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.core.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.interactions.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.grid.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.dataview.js"></script>
 
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.autotooltips.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.cellrangedecorator.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.cellrangeselector.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.cellexternalcopymanager.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.cellselectionmodel.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.checkboxselectcolumn.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/plugins/slick.rowselectionmodel.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/slick.editors.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/slick.formatters.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/slick.compositeeditor.js"></script>
-    <script src="/static/js/slickgrid/dist/browser/controls/slick.pager.js"></script>
-    <script src="/static/js/xlsx.full.min.js"></script>
-    <script src="/static/js/utils.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.autotooltips.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.cellrangedecorator.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.cellrangeselector.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.cellexternalcopymanager.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.cellselectionmodel.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.checkboxselectcolumn.js"></script>
+    <script src="js/slickgrid/dist/browser/plugins/slick.rowselectionmodel.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.editors.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.formatters.js"></script>
+    <script src="js/slickgrid/dist/browser/slick.compositeeditor.js"></script>
+    <script src="js/slickgrid/dist/browser/controls/slick.pager.js"></script>
+    <script src="js/xlsx.full.min.js"></script>
+    <script src="js/utils.js"></script>
   </body>
 </html>
