--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -105,6 +105,7 @@
 		</aside> -->
 	<!---------- header,left (종료) -------------->
 	<body>
+		<th:block layout:fragment="content"> 
 		<div class="page">
 			<aside class="navbar navbar-vertical navbar-expand-lg" data-bs-theme="dark">
 				<div class="container-fluid" style="background-color: rgb(0, 37, 171)">
@@ -627,6 +628,7 @@
 		</div>
 		</div>
 		</div>
+	</th:block>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 	
 		<script src="../../../js/jquery-3.7.1.min.js"></script>
