화면 레이아웃 변경작업 반영

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -34,6 +34,12 @@
 		<script src="js/slickgrid/dist/browser/slick.formatters.js"></script>
 		
 		<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+		<script src="js/js-tabler/tabler.min.js?1692870487" defer></script>		
+		<script src="js/libs-tabler/apexcharts/dist/apexcharts.min.js?1692870487" defer></script>
+		<script src="js/libs-tabler/jsvectormap/dist/js/jsvectormap.min.js?1692870487" defer></script>
+		<script src="js/libs-tabler/jsvectormap/dist/maps/world.js?1692870487" defer></script>
+		<script src="js/libs-tabler/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
+
 		<style>
 			.slick-header-columns {
 				/* flex-grow: 1 if we want to align sort icons to the right */
