--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ko">
 	
-	<th:block th:insert="fragments/head_j :: headFragment"></th:block>
+	<th:block th:insert="fragments/head :: headFragment"></th:block>
 
 	<body>
 		<div class="page">
 			
-			<th:block th:insert="fragments/sidebar_j :: sidebarFragment"></th:block>
+			<th:block th:insert="fragments/sidebar :: sidebarFragment"></th:block>
 			<th:block layout:fragment="content"></th:block>
 
 		</div>
