feat: aded the file page's templates

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -19,7 +19,13 @@
 		<!-- // custom css for this page -->
 		<link href="css/file-css.css" rel="stylesheet" />
 		
+	    <script
+     	 src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    	></script>
+		<!-- <script src="../../../js/jquery-3.7.1.min.js"></script>
+		<script src="../../../js/jquery-ui.min.js"></script> -->
 		<script src="js/jquery-3.7.1.min.js"></script>
+		<script src="js/jquery-ui.min.js"></script>
 		<script src="js/slickgrid/lib/jquery.event.drag-2.3.0.js"></script>
 		
 		<script src="js/slickgrid/dist/browser/slick.core.js"></script>
