--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -153,10 +153,10 @@
 							<span class="nav-link-title"> Input Files </span>
 						</a>
 						<div class="dropdown-menu show">
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/layout/file_01');"> File Management </a>
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/layout/file02');"> File Input </a> 
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> File Management </a>
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL002M0');"> File Input </a> 
 							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL003M0');"> File Upload </a> 
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> <!-- class="dropdown-item text-pink" --> Load history </a>
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL004M0');"> Load history </a>
 						</div>
 					</li>
 					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
