이전 화면 소스 추가

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -150,13 +150,36 @@
 									<path d="M18.35 5.65l-3.35 3.35" />
 								</svg>
 							</span>
-							<span class="nav-link-title"> Input Files </span>
+							<span class="nav-link-title"> Input Files1 </span>
 						</a>
 						<div class="dropdown-menu show">
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> File Management </a>
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL002M0');"> File Input </a> 
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL003M0');"> File Upload </a> 
-							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL004M0');"> Load history </a>
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL001M0');"> File Management1 </a>
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL002M0');"> File Input1 </a> 
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL003M0');"> File Upload1 </a> 
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL004M0');"> Load history1 </a>
+						</div>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#navbar-help" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false">
+							<span class="nav-link-icon d-md-none d-lg-inline-block">
+								<!-- Download SVG icon from http://tabler-icons.io/i/lifebuoy -->
+								<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                  					<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  					<path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+									<path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" />
+									<path d="M15 15l3.35 3.35" />
+									<path d="M9 15l-3.35 3.35" />
+									<path d="M5.65 5.65l3.35 3.35" />
+									<path d="M18.35 5.65l-3.35 3.35" />
+								</svg>
+							</span>
+							<span class="nav-link-title"> Input Files2 </span>
+						</a>
+						<div class="dropdown-menu show">
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL0011M0');"> File Management2 </a>
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL0022M0');"> File Input2 </a> 
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL0033M0');"> File Upload2 </a> 
+							<a class="dropdown-item" href="#" onClick="javascript:goMenuPage('/views/wrk/fil/WRKFIL0044M0');"> Load history2 </a>
 						</div>
 					</li>
 					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#navbar-base" data-bs-toggle="dropdown" data-bs-auto-close="false" role="button" aria-expanded="false"> <span class="nav-link-icon d-md-none d-lg-inline-block">
